added light and backgraund

--- a/app/index.html
+++ b/app/index.html
@@ -17,10 +17,10 @@
 
     <link media="all" rel="stylesheet" type="text/css" href="./assets/css/styles.min.css" />
   </head>
-  <body>
-    <canvas id="rootCanvas"
+  <body style="cursor: none">
+    <!-- <canvas id="rootCanvas"
       >You have some problem with canvas. Pleace reloud or try other browser</canvas
-    >
+    > -->
 
     <script type="text/javascript" src="./assets/js/scripts.min.js"></script>
   </body>
